--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,3 +16,5 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag node-webapp:$(date +%s)
