--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,5 +16,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
+        npm start
+        npm test
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag node-webapp:$(date +%s)
